# value_at_risk

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  HowToSetupCodex.md  README.md  docker-compose.yml
backend/: .dockerignore  pyproject.toml
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: models.py  seed.py  session.py
backend/app/models/: var.py
backend/tests/: test_var_api.py
backend/var_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  page.tsx
frontend/components/: AppHeader.tsx  AppHeader.vue
frontend/components/dashboard/: AssetDetailsTable.tsx  AssetDetailsTable.vue  DashboardMobileNav.vue  DashboardNavigation.vue  DriverCommentaryPanel.tsx  DriverCommentaryPanel.vue  FiltersBar.tsx  FiltersBar.vue  MarketSignalGauge.tsx  MarketSignalGauge.vue  NewsPanel.tsx  NewsPanel.vue  ScenarioDistributionChart.tsx  ScenarioDistributionChart.vue  SummaryCards.tsx  SummaryCards.vue  TimeseriesControls.tsx  TimeseriesControls.vue  VarChartCard.tsx  VarChartCard.vue  VarContributionChart.tsx  VarContributionChart.vue
frontend/components/ui/: Button.vue  Card.vue  Select.vue  Skeleton.vue  Switch.vue
frontend/composables/: useTheme.ts
frontend/hooks/: usePdfExport.ts
frontend/lib/: sample-data.ts
frontend/pages/: index.vue
frontend/scripts/: ensure-modules.cjs
frontend/tests/: SummaryCards.spec.ts
frontend/types/: var.ts
